[package]
name = "weather"
version = "0.1.0"
authors = ["Matt Potok <potok@mattpotok.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
log = "0.4.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
simplelog = "0.7.4"
